--- a/BankProject_OOP/BankProject_OOP.vcxproj
+++ b/BankProject_OOP/BankProject_OOP.vcxproj
@@ -135,9 +135,12 @@
     <ClInclude Include="clsBankClient.h" />
     <ClInclude Include="clsClientScreens.h" />
     <ClInclude Include="clsMainScreen.h" />
+    <ClInclude Include="clsManageUserScreen.h" />
     <ClInclude Include="clsPerson.h" />
     <ClInclude Include="clsScreen.h" />
     <ClInclude Include="clsTransactionsScreen.h" />
+    <ClInclude Include="clsUser.h" />
+    <ClInclude Include="clsUserScreens.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
