Added Currency class and the currency project screens

--- a/BankProject_OOP/BankProject_OOP.vcxproj.filters
+++ b/BankProject_OOP/BankProject_OOP.vcxproj.filters
@@ -53,5 +53,11 @@
     <ClInclude Include="Global.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsCurrency.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="clsCurrencyExchangeMainScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
