--- a/BankProject_OOP/BankProject_OOP.vcxproj
+++ b/BankProject_OOP/BankProject_OOP.vcxproj
@@ -132,6 +132,8 @@
   <ItemGroup>
     <ClInclude Include="clsBankClient.h" />
     <ClInclude Include="clsClientScreens.h" />
+    <ClInclude Include="clsCurrency.h" />
+    <ClInclude Include="clsCurrencyExchangeMainScreen.h" />
     <ClInclude Include="clsLoginScreen.h" />
     <ClInclude Include="clsMainScreen.h" />
     <ClInclude Include="clsManageUserScreen.h" />
