--- a/BankProject_OOP/BankProject_OOP.vcxproj.filters
+++ b/BankProject_OOP/BankProject_OOP.vcxproj.filters
@@ -13,6 +13,24 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Screens">
+      <UniqueIdentifier>{a832fae2-d619-42c0-bb60-656e6f13ad63}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Screens\Client screens">
+      <UniqueIdentifier>{e59b1aa3-1bab-406b-b28c-7a4bc6bb9320}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Core classes">
+      <UniqueIdentifier>{3164d3f0-5b51-4620-ad2d-9498d8980181}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Screens\Currency screens">
+      <UniqueIdentifier>{91795c83-137c-4571-b9a7-3960765dc486}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Screens\User screens">
+      <UniqueIdentifier>{9894b6d0-762a-4311-8cac-fcd68eb15a94}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\My Liberaries">
+      <UniqueIdentifier>{0ceb37f5-dafe-414f-bded-1663e6808969}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BankProject_OOP.cpp">
@@ -20,47 +38,59 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="clsPerson.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsBankClient.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsMainScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsClientScreens.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsTransactionsScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsManageUserScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsUser.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsUserScreens.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="clsLoginScreen.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Global.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsUser.h">
+      <Filter>Header Files\Core classes</Filter>
+    </ClInclude>
+    <ClInclude Include="clsBankClient.h">
+      <Filter>Header Files\Core classes</Filter>
+    </ClInclude>
     <ClInclude Include="clsCurrency.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Core classes</Filter>
+    </ClInclude>
+    <ClInclude Include="clsPerson.h">
+      <Filter>Header Files\Core classes</Filter>
+    </ClInclude>
+    <ClInclude Include="clsScreen.h">
+      <Filter>Header Files\Screens</Filter>
+    </ClInclude>
+    <ClInclude Include="clsClientScreens.h">
+      <Filter>Header Files\Screens\Client screens</Filter>
+    </ClInclude>
+    <ClInclude Include="clsTransactionsScreen.h">
+      <Filter>Header Files\Screens\Client screens</Filter>
+    </ClInclude>
+    <ClInclude Include="clsMainScreen.h">
+      <Filter>Header Files\Screens\Client screens</Filter>
     </ClInclude>
     <ClInclude Include="clsCurrencyExchangeMainScreen.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Screens\Currency screens</Filter>
     </ClInclude>
     <ClInclude Include="clsCurrencyScreens.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Screens\Currency screens</Filter>
+    </ClInclude>
+    <ClInclude Include="clsLoginScreen.h">
+      <Filter>Header Files\Screens\User screens</Filter>
+    </ClInclude>
+    <ClInclude Include="clsUserScreens.h">
+      <Filter>Header Files\Screens\User screens</Filter>
+    </ClInclude>
+    <ClInclude Include="clsManageUserScreen.h">
+      <Filter>Header Files\Screens\User screens</Filter>
+    </ClInclude>
+    <ClInclude Include="clsUtil.h">
+      <Filter>Header Files\My Liberaries</Filter>
+    </ClInclude>
+    <ClInclude Include="clsDate.h">
+      <Filter>Header Files\My Liberaries</Filter>
+    </ClInclude>
+    <ClInclude Include="clsInputValidate.h">
+      <Filter>Header Files\My Liberaries</Filter>
+    </ClInclude>
+    <ClInclude Include="clsString.h">
+      <Filter>Header Files\My Liberaries</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
